--- a/package.json
+++ b/package.json
@@ -13,13 +13,16 @@
     "@types/react-dom": "^18.2.7",
     "axios": "^1.5.1",
     "docx": "^8.2.2",
+    "extenso": "^2.0.1",
     "file-saver": "^2.0.5",
+    "moment": "^2.30.1",
     "node-fetch": "^3.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "xlsx": "https://cdn.sheetjs.com/xlsx-0.20.1/xlsx-0.20.1.tgz"
   },
   "scripts": {
     "start": "react-scripts start",
